...
    <string name="activity_cats">Cats on Activity 😼</string>
    <string name="activity_fragments">Cats on Fragments 😼</string>
    <string name="activity_nav_component">Cats on NavComponent 😼</string>

    <string name="activity_cat_details">Cat Details</string>

    <string name="fragment_cats_title">Cats Fragment 😼</string>
    <string name="fragment_cat_details">Cat Details</string>
</resources>
